fix ui gap when no exportable formats & no pagination

--- a/publishes/resources/sass/_quirk.scss
+++ b/publishes/resources/sass/_quirk.scss
@@ -1458,7 +1458,7 @@ th {
 .table {
     width: 100%;
     max-width: 100%;
-    margin-bottom: 17px;
+    /*margin-bottom: 17px;*/
 }
 .table > thead > tr > th,
 .table > tbody > tr > th,
